force-app/main/default/objects/Contact/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Broker-Main</fullName>
            </value>
            <value>
                <fullName>Claim-Main</fullName>
            </value>
            <value>
                <fullName>Credit-Main</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>