force-app/main/default/objects/Contact/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marital Status</label>
    <type>Checkbox</type>
</CustomField>