force-app/main/default/objects/Contact/fields/NameKo__c.field-meta.xml
<CustomField>
    <fullName>NameKo__c</fullName>
    <label>Name (Ko)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>