force-app/main/default/objects/Contact/fields/SpouseName__c.field-meta.xml
<CustomField>
    <fullName>SpouseName__c</fullName>
    <label>Sqouse/Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>